--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/11/2020 12:44:00 PM</p>
+    <p class="lastupdate">09/11/2020 12:49:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,15 +50,15 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">70.0&#176;F</td>
+        <td class="data">70.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">70.0&#176;F</td>
+        <td class="data">70.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">70.0&#176;F</td>
+        <td class="data">70.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
@@ -66,15 +66,15 @@
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">52%</td>
+        <td class="data">51%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">30.015 inHg (-0.040)</td>
+        <td class="data">30.015 inHg (-0.041)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph NE (45&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="12:43:36 PM">
-            70.0</span><br/>
+          <span title="12:48:34 PM">
+            70.6</span><br/>
           <span title="06:21:27 AM">
             48.2</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="12:43:36 PM" class="hival">
-            70.0</span>
+          <span title="12:48:34 PM" class="hival">
+            70.6</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)" class="hival">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="06:04:49 AM">
             88</span><br/>
-          <span title="12:42:00 PM">
-            52</span>
+          <span title="12:47:08 PM">
+            51</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:04:49 AM (Friday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          161
+          160
         </td>
         <td class="data new_row hilo_week">
           0<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">85%</td>
+      <td class="data">100%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">9 days, 21 hours, 57 minutes</td>
+      <td class="data">9 days, 22 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">9 days, 21 hours, 57 minutes</td>
+      <td class="data">9 days, 22 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
